demo-backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: demo-backend-service
spec:
  selector:
    app: demo
    tier: backend
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
  type: NodePort
