demo-frontend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikubefrontend
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-frontend-service
          servicePort: 8082
